<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/MainLayoutStyle"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_phone_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_title_phone"
            android:textColor="#ff0000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/connect_bt"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/text_connect_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />


                <CheckBox
                    android:id="@+id/switch_connect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_ui"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/text_ui_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />


                <CheckBox
                    android:id="@+id/switch_show_ui"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_connect_bt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/sync_contacts"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/text_sync_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


            <Button
                android:id="@+id/button_sync_contacts"
                style="@style/ButtonStyle"
                android:text="@string/sync" />


            <Button
                android:id="@+id/button_clear_contacts"
                style="@style/ButtonStyle"
                android:text="@string/clear" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_contact_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/contact_name" />

            <EditText
                android:id="@+id/edit_contact_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/contact_number"
                android:inputType="phone" />

            <Button
                android:id="@+id/button_incoming"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/incoming" />

            <Button
                android:id="@+id/button_outgoing"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/outgoing" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/accept" />

            <Button
                android:id="@+id/button_reject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/reject" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_accept_simulate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/accept_simulate" />


            <Button
                android:id="@+id/button_hangup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/hangup" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
